<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent"
    tools:context=".ui.QuizScreen">
    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/quiz_header"
        android:padding="0dp">
       <LinearLayout
           android:gravity="center_horizontal"
           android:layout_width="match_parent"
           android:orientation="vertical"
           android:layout_height="match_parent">
           <RelativeLayout
               android:padding="10dp"
               android:layout_width="match_parent"
                android:layout_height="wrap_content">
               <ImageButton
                   android:id="@+id/btn_back"
                   android:layout_width="40dp"
                   android:layout_height="40dp"
                   android:layout_alignParentStart="true"
                   android:layout_centerVertical="true"
                   android:background="@android:color/transparent"
                   android:contentDescription="@string/hamburger_image"
                   android:onClick="btnBack"
                   android:src="@drawable/ic_back_icon"
                   app:tint="@color/white" />
               <TextView
                   android:id="@+id/txt_quizName"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_centerInParent="true"
                   android:fontFamily="@font/ubuntu_bold"
                   android:text="@string/quiz"
                   android:textColor="@color/white"
                   android:textSize="18sp" />
           </RelativeLayout>
           <TextView
               android:id="@+id/txt_quiz_question"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="35dp"
               android:fontFamily="@font/ubuntu_medium"
               android:gravity="center"
               android:padding="10dp"
               android:text="@string/what_is_meaning_of"
               android:textColor="@color/white"
               android:textSize="17sp" />
       </LinearLayout>
        <TextView
            android:id="@+id/txt_quizCounts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/ubuntu"
            android:text="@string/progress"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="center_horizontal"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:orientation="vertical"
        android:layout_below="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/btnOpt1"
            android:background="@drawable/options_btn_bg"
            android:padding="10dp"
            android:textAllCaps="false"
            android:fontFamily="@font/ubuntu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:id="@+id/btnOpt2"
            android:layout_marginTop="8dp"
            android:background="@drawable/options_btn_bg"
            android:padding="10dp"
            android:textAllCaps="false"
            android:fontFamily="@font/ubuntu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:id="@+id/btnOpt3"
            android:layout_marginTop="8dp"
            android:background="@drawable/options_btn_bg"
            android:padding="10dp"
            android:textAllCaps="false"
            android:fontFamily="@font/ubuntu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>